display: add an option to turn off the display

https://bugzilla.gnome.org/show_bug.cgi?id=707570